--- a/springboot2-jpa-crud-example/src/main/resources/application.properties
+++ b/springboot2-jpa-crud-example/src/main/resources/application.properties
@@ -1,18 +1,22 @@
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-#spring.datasource.url = jdbc:mysql://localhost:3306/users_database?useSSL=false
-#spring.datasource.username = root
-#spring.datasource.password = root
+#Web configuration
+spring.mvc.view.prefix=/views/
+spring.mvc.view.suffix=.jsp
+
+#Server configuration
+#server.servlet.context-path=/SpringMVC
+#spring.mvc.servlet.path=/servlet
+server.port=8080
+
+### DATABASE ###
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/empdb
+spring.datasource.username=root
+spring.datasource.password=
+### JPA / HIBERNATE ###
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto = update
 
-info.app.name=Spring Boot - RestTemplate CRUD Rest Client Example
-info.app.description=Spring Boot - RestTemplate CRUD Rest Client Example
-info.app.version=1.0.0
-
-server.servlet.context-path=/springboot-crud-rest
